--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-image: url(/Users/paulpaasche/website/images/backgroundlogin.png);
+  background-image: url(backgroundlogin.png);
 }
 
 .center {
